# illustrations

./: README.md  main.py  pyproject.toml
art/: autoregression.py
